# Brandon-Switching-Large

./: LICENSE  README.md
Labview-lrms-proof-of-concept/Tesla-LRMS-PoC/: 2526 Connect.vi  2526 Disconnect.vi  2526 Initial Connect.vi  2526 Open Ref.vi  2526 Parse Scan List.vi  2810A Connect.vi  2810A Disconnect.vi  2810A Initial Connect Multiple.vi  2810A Open Ref.vi  2810A Parse Scan List.vi  Acquisition Finished.lvlib  Async Test.vi  CTETWeldMapping.csv  Chad_Test.csv  Check for Faults.vi  Check if Measurement Finished  Check if Measurement Ready.vi  DMM Acq Done.vi  DMM Acq Done_old_2_5_2021.vi  DMM Cfg Meas.vi  DMM Cfg Multi Point - Continuous.vi  DMM Cfg Multi Point.vi  DMM Cfg Sample Trig Slope.vi  DMM Cfg Trig.vi  DMM Control.vi  DMM Measure.vi  DMM Open Ref.vi  DMM Trig Slope.vi  EM3_CurrentCollector.csv  EM3_Terminal.csv  Find Specification Match.vi  Four Probe Asynchronous.vi  Get Device Names and Topology.vi  Get JSON Config.vi  Get Switch Names and Topology.vi  Get Value from JSON Text with Parameter.vi  Global Operations.ctl  Index Array.vi  JSONCluster.ctl  JSONDefaults.ctl  (+49 more)
PPack_B Build/PPack_B Build/: PPack B_Laser Weld Test.aliases  PPack B_Laser Weld Test.lvlps  PPack B_Laser Weld Test.lvproj
PPack_B Build/PPack_B Build/Config/: Chad_Test.csv  Create Route File.vi  PPack_B.xlsx  PPack_Connection_Test.xls
PPack_B Build/PPack_B Build/Config/SubVIs/: Get Route Group Specifications.vi  Remove Group IVI Devices.vi
PPack_B Build/PPack_B Build/Main/: LRMS_Scan_Test.vi  LRMS_Scan_Test_auto.vi
PPack_B Build/PPack_B Build/Utility/: Find Specification Match.vi  Get Switch Device Names.vi  LRMS_Switching_Config.vi  NI-SWITCH SwitchBlock Configuration.vi  SwitchBlock Arrays.vi
labview-grpc-query-server/: CMakeLists.txt  ExampleMeasurementServer.vi  README.md  Test.aliases  Test.lvlps  Test.lvproj  measurement_service.proto
labview-grpc-query-server/VIs/: MeasurementServer_AddFourProbeMeasurementEvent.vi  MeasurementServer_AddInvokeEvent.vi  MeasurementServer_AddQueryEvent.vi  MeasurementServer_AddRegisterEvent.vi  MeasurementServer_AddSendConfigEvent.vi  MeasurementServer_AddStreamErrorEvent.vi  MeasurementServer_AddStreamFourProbeMeasurementEvent.vi  MeasurementServer_ConfigRequest.ctl  MeasurementServer_CreateAndRegisterServerEvent.vim  MeasurementServer_CreateServer.vi  MeasurementServer_ErrorOutData.ctl  MeasurementServer_Event.ctl  MeasurementServer_Event_Close.vi  MeasurementServer_Event_Fire.vi  MeasurementServer_FourProbeMeasurementComplete.vi  MeasurementServer_FourProbeMeasurement_WriteValue.vi  MeasurementServer_FourProbeRawData.ctl  MeasurementServer_FourProbeResponse.ctl  MeasurementServer_GetRequest_Config.vi  MeasurementServer_GetRequest_Invoke.vi  MeasurementServer_GetRequest_Query.vi  MeasurementServer_GetRequest_Register.vi  MeasurementServer_InvokeEventData.ctl  MeasurementServer_InvokeRequest.ctl  MeasurementServer_InvokeResponse.ctl  MeasurementServer_QueryEventData.ctl  MeasurementServer_QueryRequest.ctl  MeasurementServer_QueryResponse.ctl  MeasurementServer_RegisterEventData.ctl  MeasurementServer_RegisterRequest.ctl  MeasurementServer_ServerRefs.ctl  MeasurementServer_SetResponse_Config.vi  MeasurementServer_SetResponse_FourProbeMeasurement.vi  MeasurementServer_SetResponse_Invoke.vi  MeasurementServer_SetResponse_Query.vi  MeasurementServer_Start.vi  MeasurementServer_StartServer.vi  MeasurementServer_Stop.vi  MeasurementServer_Stream_Error.vi  MeasurementServer_gRPCid.ctl  (+5 more)
labview-grpc-query-server/src/: event_data.cc  example_client.cc  measurement_server.cc  measurement_server.h  server_interop.cc
